--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/GEMAK SECURITY SERVICES LOGO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gemak Security Shop — Harnessing Technology For Your Convenience</title>
     <meta name="description" content="Zimbabwe's leading security solutions provider. CCTV, alarms, gate automation, electric fencing, guard equipment. 9 branches nationwide." />
